--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+.*#
+*~
+*.o
+
+Makefile
+Makefile.in
+.deps/
+/aclocal.m4
+/autom4te.cache/
+/build-aux/
+/config.*
+/configure
+/configure~
+/libtool
+/stamp-h1
+
 /mtgen
 /dll.numproptag.txt
